feat(java-15): rework the maven compile plugins